--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": "https://hungry-noether-8ac1d6.netlify.com",
+  "homepage": "https://wjdghks963.github.io/nomflix",
   "browserslist": [
     ">0.2%",
     "not dead",
